Code for a Revision of PaperIII

--- a/PaperIII/Makefile
+++ b/PaperIII/Makefile
@@ -3,56 +3,42 @@
 FC = h5fc
 
 # With OpenMP
-FFLAGS = -march=native -Wall -Ofast -fPIC -g -fopenmp
+FFLAGS = -march=native -Wall -Ofast -fPIC  -fopenmp #-fdefault-real-16
 
 # Without OpenMP
 #FFLAGS = -march=native -Wall -Ofast -fPIC -g
 
-F2PYFL = --f90flags=-fopenmp -lgomp
-
-# This target tests the double precision linear algebra module
-latest: dpla.f90 latest.f90 Makefile
-	$(FC) $(FFLAGS) dpla.f90 latest.f90 -o latest
-
-# Tests the operators constructed in ops.f90
-opstest: ops.f90 triang.f90 matrices.f90 opstest.f90 quad.f90 param.f90 dpla.f90 Makefile 
-	$(FC) $(FFLAGS) dpla.f90 matrices.f90 param.f90 triang.f90  ops.f90 opstest.f90 quad.f90 -o opstest
-
-# Tests the construction of the G-Matrix
-gtest:  dpla.f90 quad.f90 matrices.f90 ops.f90 Gtest.f90 triang.f90 Makefile
-	$(FC) $(FFLAGS) dpla.f90 quad.f90 triang.f90 matrices.f90 ops.f90 Gtest.f90 -o gtest
-
-# A accuracy/convergence test. Prints the discrepance from the reference solution.
-dsdgacctest: dpla.f90 testcases.f90 triang.f90 euler.f90 sdgsol.f90 matrices.f90 dsdgtest.f90 param.f90 Makefile
-	$(FC) $(FFLAGS) dpla.f90 matrices.f90 param.f90 triang.f90 euler.f90 quad.f90 ops.f90 testcases.f90 sdgsol.f90 acctest.f90 -o acctest
-
 # Tests the vanilla DG solver on a simple two-dimensional Riemann problem with circular or translation invariance
-dsdgtest: testcases.f90 triang.f90 euler.f90 sdgsol.f90 matrices.f90 dsdgtest.f90 param.f90 dpla.f90 Makefile
-	$(FC) $(FFLAGS) dpla.f90 matrices.f90 param.f90 triang.f90 euler.f90 quad.f90 ops.f90 testcases.f90 sdgsol.f90 dsdgtest.f90 -o dsdgtest
+dsdgtest: qpla.f90 bf.f90 quadshp.f90 opshp.f90 testcases.f90 trgrid.f90 trianghp.f90 euler.f90 sdgsol.f90 dsdgtest.f90 param.f90 Makefile
+	$(FC) $(FFLAGS) param.f90 qpla.f90 bf.f90 quadshp.f90 opshp.f90 trianghp.f90 trgrid.f90 euler.f90 testcases.f90 sdgsol.f90 dsdgtest.f90 -o dsdgtest
 
-# A unstructured stabilizes solver on triangles - used for the forward facing step and airfoil tests
-udsdg: testcases.f90 triang.f90 euler.f90 sdgsol.f90 ops.f90 matrices.f90 udsdg.f90 param.f90 dpla.f90 Makefile
-	$(FC) $(FFLAGS) dpla.f90 matrices.f90 param.f90 triang.f90 euler.f90 quad.f90 ops.f90 testcases.f90 sdgsol.f90 udsdg.f90 -o udsdg
+# An accuracy test. Prints the discrepance from the reference solution.
+dsdgacctest: qpla.f90 bf.f90 quadshp.f90 opshp.f90 testcases.f90 trgrid.f90 trianghp.f90 euler.f90 sdgsol.f90 acctest.f90 param.f90 Makefile
+	$(FC) $(FFLAGS) param.f90 qpla.f90 bf.f90 quadshp.f90 opshp.f90 trianghp.f90 trgrid.f90 euler.f90 testcases.f90 sdgsol.f90 acctest.f90 -o acctest
+
+# an unstructured proof of concept solver
+udsdg: qpla.f90 bf.f90 quadshp.f90 opshp.f90 testcases.f90 trgrid.f90 trianghp.f90 euler.f90 sdgsol.f90 udsdg.f90 param.f90 Makefile
+	$(FC) $(FFLAGS) param.f90 qpla.f90 bf.f90 quadshp.f90 opshp.f90 trianghp.f90 trgrid.f90 euler.f90 testcases.f90 sdgsol.f90 udsdg.f90 -o udsdg
+
+# Tests the forward facing step problem
+ffs: qpla.f90 bf.f90 quadshp.f90 opshp.f90 testcases.f90 trgrid.f90 trianghp.f90 euler.f90 sdgsol.f90 ffs.f90 param.f90 Makefile
+	$(FC) $(FFLAGS) param.f90 qpla.f90 bf.f90 quadshp.f90 opshp.f90 trianghp.f90 trgrid.f90 euler.f90 testcases.f90 sdgsol.f90 ffs.f90 -o ffs
+
+# writes out the collocation points for plotting reasons
+triplts: qpla.f90 quadshp.f90 opshp.f90 trianghp.f90 param.f90 csv.f90 bf.f90 Makefile
+	$(FC) $(FFLAGS) param.f90 qpla.f90 bf.f90 quadshp.f90 trianghp.f90 opshp.f90 csv.f90 triplts.f90 -o triplts
 
 
-# A dummy target to carry out all tests for a given order.
-alltests: udsdg dsdgtest dsdgacctest gtest opstest latest
-	./latest
-	./opstest
-	./gtest
-	#ulimit -s unlimited		# We need more stack space
-	./acctest grids/acc1.1.node grids/acc1.1.ele acc1 1.0
-	./acctest grids/acc2.1.node grids/acc2.1.ele acc2 1.0
-	ulimit -s unlimited & ./acctest grids/acc3.1.node grids/acc3.1.ele acc3 1.0
-	./udsdg grids/Naca0012.1.node grids/Naca0012.1.ele Naca0012 3.0
-	./udsdg grids/NacaLR.1.node grids/NacaLR.1.ele Naca0012LR 3.0
-	./dsdgtest grids/empty.1.node grids/empty.1.ele sedov 0.2
+# tests the Kelvin-Helmholtz instability
+dgkhi: qpla.f90 bf.f90 quadshp.f90 opshp.f90 testcases.f90 trgrid.f90 trianghp.f90 euler.f90 sdgsol.f90 dgkhi.f90 param.f90 Makefile
+	$(FC) $(FFLAGS) param.f90 qpla.f90 bf.f90 quadshp.f90 opshp.f90 trianghp.f90 trgrid.f90 euler.f90 testcases.f90 sdgsol.f90 dgkhi.f90 -o dgkhi
 
-allfigures:
-	python3 naca0012.py
-	python3 euler.py 
-	python3 ffs.py 
-	python3 sedov.py
+# tests a two-dimensional Riemann problem
+twdrp: qpla.f90 bf.f90 quadshp.f90 opshp.f90 testcases.f90 trgrid.f90 trianghp.f90 euler.f90 sdgsol.f90 twdrp.f90 param.f90 Makefile
+	$(FC) $(FFLAGS) param.f90 qpla.f90 bf.f90 quadshp.f90 opshp.f90 trianghp.f90 trgrid.f90 euler.f90 testcases.f90 sdgsol.f90 twdrp.f90 -o twdrp
 
-clean:
-	rm *.o *.mod *.out vgcore.* acctest dgtest gtest dsdgtest cdtest dualgfv dualgtest latest llftest ddgtest specdiag sdgtest opstest udddg uddg udg udsdg ullf usok usw
+# tests the double mach reflection problem
+dmr: qpla.f90 bf.f90 quadshp.f90 opshp.f90 testcases.f90 trgrid.f90 trianghp.f90 euler.f90 sdgsol.f90 dmr.f90 param.f90 Makefile
+	$(FC) $(FFLAGS) param.f90 qpla.f90 bf.f90 quadshp.f90 opshp.f90 trianghp.f90 trgrid.f90 euler.f90 testcases.f90 sdgsol.f90 dmr.f90 -o dmr
+
+
